--- a/WpfApp2.csproj
+++ b/WpfApp2.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\download.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BasicAudio" Version="2022.11.30.1" />
     <PackageReference Include="DirectShowLib.Standard" Version="2.1.0" />
     <PackageReference Include="FFMpegCore" Version="5.1.0" />
@@ -29,7 +33,12 @@
     <PackageReference Include="OpenCvSharp4" Version="4.7.0.20230115" />
     <PackageReference Include="OpenCvSharp4.Extensions" Version="4.7.0.20230115" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.7.0.20230115" />
+    <PackageReference Include="PdfSharp" Version="1.50.5147" />
     <PackageReference Include="Unity" Version="5.11.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\download.png" />
   </ItemGroup>
 
   <ItemGroup>
